--- a/src/app/templates/templates.html
+++ b/src/app/templates/templates.html
@@ -22,4 +22,5 @@
   <td style="cursor:pointer;"><%=indefToName(model.get("from"), model.get("fromClass"))%></td>
   <td style="cursor:pointer;"><%=indefToName(model.get("to"), model.get("toClass"))%></td>
   <td style="cursor:pointer;"><%=model.get("delta")%></td>
+  <td style="cursor:pointer;"><%=model.get("data")%></td>
 </script>
