start to change work with collection

--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -30,6 +30,7 @@
       <ul class="nav navbar-nav main-menu">
         <li class="active route-home"><a href="#">Home</a></li>
         <li class="route-gains"><a href="#gains">Gains</a></li>
+        <li class="route-incomes"><a href="#incomes">Incomes</a></li>
         <li class="route-bills"><a href="#bills">Bills</a></li>
         <li class="route-about"><a href="#about">About</a></li>
 
@@ -93,6 +94,8 @@
 <script type="text/javascript" src="{{ url_for('static', filename='myjs/transactions.js') }}"></script>
 
 <script type="text/javascript" src="{{ url_for('static', filename='myjs/page/homePage.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='myjs/page/gainsPage.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='myjs/page/incomesPage.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='myjs/page/billsPage.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='myjs/page/aboutPage.js') }}"></script>
 
