add incomes adding

--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -86,6 +86,7 @@
 <script type="text/javascript" src="{{ url_for('static', filename='myjs/mvc/categoriesMVC.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='myjs/mvc/homeMVC.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='myjs/mvc/addGainView.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='myjs/mvc/addIncomeView.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='myjs/categories.js') }}"></script>
 
 <script type="text/javascript" src="{{ url_for('static', filename='myjs/mvc/billsMVC.js') }}"></script>
