Added signin form

--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -32,31 +32,14 @@
         <li class="route-gains"><a href="#gains">Gains</a></li>
         <li class="route-incomes"><a href="#incomes">Incomes</a></li>
         <li class="route-bills"><a href="#bills">Bills</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
         <li class="route-about"><a href="#about">About</a></li>
-
-        <form class="navbar-form navbar-right" role="form">
-          <div class="form-group">
-            <input type="text" class="form-control"/>
-            <button type="submit" placeholder="Search" class="btn">Find</button>
-          </div>
-        </form>
-
-
+        <li class="route-logout"><a href="#logout">Log Out</a></li>
       </ul>
     </div>
   </div>
 </div>
-
-<!--
-    <div class="container">
-
-      <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-      </div>
-
-    </div>
--->
 
 <div class="container content" id="container-up"></div>
 <div class="container content" id="container"></div>
