--- a/src/app/templates/ind_tmp.html
+++ b/src/app/templates/ind_tmp.html
@@ -2,6 +2,89 @@
 <html>
 
 <head lang="en">
+    <link rel="shortcut icon" href="{{ url_for('static',filename='images/1c_coin.jpg')}}" type="image/vnd.microsoft.icon" />
+    <meta charset="UTF-8">
+    <title>Account-ost</title>
+    <link href="{{ url_for('static',filename='css/bootstrap.css')}}" rel="stylesheet"/>
+    <link href="{{ url_for('static',filename='css/bootstrap-theme.css')}}" rel="stylesheet"/>
+    <link href="{{ url_for('static',filename='css/starter-template.css')}}" rel="stylesheet"/>
+    <link href="{{ url_for('static', filename='css/signin.css')}}" rel="stylesheet" type="text/css"/>
+</head>
+
+<body>  
+
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+       <a class="navbar-brand" href="#">Accounts</a>
+    </div>
+
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav main-menu">
+        <li class="active route-login"><a href="#">Login</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <form class="form-signin" role="form">
+    <h2 class="form-signin-heading">Please sign in</h2>
+    <label for="inputEmail" class="sr-only">Email address</label>
+    <input type="email" id="inputUser" class="form-control" placeholder="Username" required="" autofocus="">
+    <label for="inputPassword" class="sr-only">Password</label>
+    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+<!--     <div class="checkbox">
+      <label>
+        <input type="checkbox" value="remember-me"> Remember me
+      </label>
+    </div> -->
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+  </form>
+</div>
+
+<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+
+<script>
+$(".btn").click(function() {
+  $.ajax({
+    method: 'post',
+    url: 'login',
+    data: {
+      username: $("#inputUser").val(),
+      password: $("#inputPassword").val()
+    }
+  }).done(function(json) {
+    console.log(json);
+    console.log('success');
+    window.location = "http://127.0.0.1:5000";
+  }).fail(function() {
+    alert("No user with such data.");
+  });
+});
+</script>
+
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
+<html>
+
+<head lang="en">
     <meta charset="UTF-8">
     <title></title>
  </head>
@@ -69,4 +152,4 @@ document.getElementById('user3').onclick = function() {
 </script>
 
 </body>
-</html>
+</html> -->
